docs: update benchmark